<resources>
    <string name="app_name">Bai4_Toan_B1704780</string>
    <string name="title">Lập trình với ListView</string>
    <string name="btn1">LISTVIEW CONTROL VỚI MẢNG DỮ LIỆU ĐỊNH SẴN</string>
    <string name="btn2">LISTVIEW VỚI MẢNG DỮ LIỆU ĐƯỢC LƯU TRONG XML</string>
    <string name="btn3">ARRAYLIST VÀ LISTVIEW CONTROL</string>
    <string name="btn4">ARRAYLIST LÀ CÁC OBJECT BẤT KỲ</string>
    <string name="btn5">LISTVIEW DƯỚI DẠNG LISTACTIVITY</string>
    <string name="btn6">THOÁT</string>
</resources>
